[gd_scene load_steps=17 format=2]

[ext_resource path="res://data/UI/scripts/game_settings.gd" type="Script" id=1]
[ext_resource path="res://data/fonts/ReemKufi-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://data/graphics/saves/save_add.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_color = Color( 0.913725, 0.219608, 0.219608, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 155.017, 27.8606 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 150.721, 23.5647 )

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 133.537, 22.1328 )

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 103.466, 22.1328 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 251.05, 142.891 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 251.258, 140.873 )

[sub_resource type="DynamicFont" id=12]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 19.8512, 19.4919 )

[node name="game_settings" type="Panel"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="footer" type="Label" parent="."]
margin_left = 101.653
margin_top = 993.227
margin_right = 290.653
margin_bottom = 1083.23
custom_fonts/font = SubResource( 1 )
text = "ApeVerse Framework v0.1 alpha"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load game" type="Label" parent="."]
margin_left = 94.0
margin_top = 297.0
margin_right = 409.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 2 )
text = "Load Game"

[node name="load" type="Area2D" parent="load game"]

[node name="col" type="CollisionShape2D" parent="load game/load"]
position = Vector2( 158.949, 44.3912 )
shape = SubResource( 3 )

[node name="save game" type="Label" parent="."]
margin_left = 95.0
margin_top = 400.0
margin_right = 398.0
margin_bottom = 490.0
custom_fonts/font = SubResource( 4 )
text = "Save Game"

[node name="save" type="Area2D" parent="save game"]

[node name="col" type="CollisionShape2D" parent="save game/save"]
position = Vector2( 153.653, 45.9251 )
shape = SubResource( 5 )

[node name="exit game" type="Label" parent="."]
margin_left = 94.0
margin_top = 502.0
margin_right = 370.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 6 )
text = "Exit Game"

[node name="exit" type="Area2D" parent="exit game"]

[node name="col" type="CollisionShape2D" parent="exit game/exit"]
position = Vector2( 138.901, 47.0272 )
shape = SubResource( 7 )

[node name="patreon" type="Label" parent="."]
margin_left = 98.0
margin_top = 799.869
margin_right = 315.0
margin_bottom = 889.869
custom_fonts/font = SubResource( 8 )
text = "Patreon"

[node name="patreon" type="Area2D" parent="patreon"]

[node name="col" type="CollisionShape2D" parent="patreon/patreon"]
position = Vector2( 109.126, 46.874 )
shape = SubResource( 9 )

[node name="savegames" type="Container" parent="."]
margin_left = -22.0
margin_top = 102.117
margin_right = 18.0
margin_bottom = 142.117
mouse_filter = 2

[node name="save1" type="Sprite" parent="savegames"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 693.884, 341.585 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="save1" type="Area2D" parent="savegames/save1"]

[node name="col" type="CollisionShape2D" parent="savegames/save1/save1"]
shape = SubResource( 10 )

[node name="save2" type="Sprite" parent="savegames"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 1183.13, 341.488 )
scale = Vector2( 0.9, 0.9 )

[node name="save2" type="Area2D" parent="savegames/save2"]
position = Vector2( -543.605, 0.108124 )

[node name="col" type="CollisionShape2D" parent="savegames/save2/save2"]
position = Vector2( 542.016, -7.19489 )
shape = SubResource( 10 )

[node name="save3" type="Sprite" parent="savegames"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 1669.74, 343.728 )
scale = Vector2( 0.9, 0.9 )

[node name="save3" type="Area2D" parent="savegames/save3"]
position = Vector2( -2.65601, -2.38089 )

[node name="col" type="CollisionShape2D" parent="savegames/save3/save3"]
shape = SubResource( 11 )

[node name="save4" type="Sprite" parent="savegames"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 693.495, 637.002 )
scale = Vector2( 0.9, 0.9 )

[node name="save4" type="Area2D" parent="savegames/save4"]
position = Vector2( 0.432983, -328.241 )

[node name="col" type="CollisionShape2D" parent="savegames/save4/save4"]
position = Vector2( -2.39825, 328.567 )
shape = SubResource( 10 )

[node name="save5" type="Sprite" parent="savegames"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 1184.4, 635.054 )
scale = Vector2( 0.9, 0.9 )

[node name="save5" type="Area2D" parent="savegames/save5"]
position = Vector2( -545.012, -326.077 )

[node name="col" type="CollisionShape2D" parent="savegames/save5/save5"]
position = Vector2( 549.211, 321.372 )
shape = SubResource( 10 )

[node name="save6" type="Sprite" parent="savegames"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 1669.45, 635.054 )
scale = Vector2( 0.9, 0.9 )

[node name="save6" type="Area2D" parent="savegames/save6"]
position = Vector2( -1083.96, -326.077 )

[node name="col" type="CollisionShape2D" parent="savegames/save6/save6"]
position = Vector2( 1084.03, 323.77 )
shape = SubResource( 10 )

[node name="page1" type="Area2D" parent="savegames"]
position = Vector2( 469.045, 114.063 )
scale = Vector2( 1.5, 1.5 )
z_index = 99

[node name="label_background" type="Panel" parent="savegames/page1"]
modulate = Color( 0.445268, 2.16864, 2.21, 1 )
self_modulate = Color( 0.741176, 0.811765, 0.862745, 1 )
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="page_number" type="Label" parent="savegames/page1"]
margin_left = 15.0799
margin_top = -7.89911
margin_right = 55.0799
margin_bottom = 47.1009
custom_fonts/font = SubResource( 12 )
text = "1"

[node name="col" type="CollisionShape2D" parent="savegames/page1"]
position = Vector2( 19.8132, 20.1734 )
z_index = 100
shape = SubResource( 13 )

[node name="page2" type="Area2D" parent="savegames"]
position = Vector2( 534.045, 114.063 )
scale = Vector2( 1.5, 1.5 )
z_index = 99

[node name="label_background" type="Panel" parent="savegames/page2"]
modulate = Color( 0.445268, 2.16864, 2.21, 1 )
self_modulate = Color( 0.741176, 0.811765, 0.862745, 1 )
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="page_number" type="Label" parent="savegames/page2"]
margin_left = 9.0
margin_top = -8.0
margin_right = 49.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 12 )
text = "2"

[node name="col" type="CollisionShape2D" parent="savegames/page2"]
position = Vector2( 19.8132, 20.1734 )
shape = SubResource( 13 )

[node name="page3" type="Area2D" parent="savegames"]
position = Vector2( 599.045, 114.063 )
scale = Vector2( 1.5, 1.5 )
z_index = 99

[node name="label_background" type="Panel" parent="savegames/page3"]
modulate = Color( 0.445268, 2.16864, 2.21, 1 )
self_modulate = Color( 0.741176, 0.811765, 0.862745, 1 )
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="page_number" type="Label" parent="savegames/page3"]
margin_left = 10.3333
margin_top = -8.0
margin_right = 50.3333
margin_bottom = 47.0
custom_fonts/font = SubResource( 12 )
text = "3"

[node name="col" type="CollisionShape2D" parent="savegames/page3"]
position = Vector2( 19.8132, 20.1734 )
shape = SubResource( 13 )

[node name="page4" type="Area2D" parent="savegames"]
visible = false
position = Vector2( 664.045, 114.063 )
scale = Vector2( 1.5, 1.5 )
z_index = 99

[node name="label_background" type="Panel" parent="savegames/page4"]
modulate = Color( 0.445268, 2.16864, 2.21, 1 )
self_modulate = Color( 0.741176, 0.811765, 0.862745, 1 )
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="page_number" type="Label" parent="savegames/page4"]
margin_left = 9.66666
margin_top = -8.0
margin_right = 49.6667
margin_bottom = 47.0
custom_fonts/font = SubResource( 12 )
text = "4"

[node name="col" type="CollisionShape2D" parent="savegames/page4"]
position = Vector2( 19.8132, 20.1734 )
shape = SubResource( 13 )

[node name="page5" type="Area2D" parent="savegames"]
visible = false
position = Vector2( 729.045, 114.063 )
scale = Vector2( 1.5, 1.5 )
z_index = 99

[node name="label_background" type="Panel" parent="savegames/page5"]
modulate = Color( 0.445268, 2.16864, 2.21, 1 )
self_modulate = Color( 0.741176, 0.811765, 0.862745, 1 )
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="page_number" type="Label" parent="savegames/page5"]
margin_left = 10.3333
margin_top = -8.0
margin_right = 50.3333
margin_bottom = 47.0
custom_fonts/font = SubResource( 12 )
text = "5"

[node name="col" type="CollisionShape2D" parent="savegames/page5"]
position = Vector2( 19.8132, 20.1734 )
shape = SubResource( 13 )

[node name="page6" type="Area2D" parent="savegames"]
visible = false
position = Vector2( 794.045, 114.063 )
scale = Vector2( 1.5, 1.5 )
z_index = 99

[node name="label_background" type="Panel" parent="savegames/page6"]
modulate = Color( 0.445268, 2.16864, 2.21, 1 )
self_modulate = Color( 0.741176, 0.811765, 0.862745, 1 )
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="page_number" type="Label" parent="savegames/page6"]
margin_left = 10.3333
margin_top = -8.0
margin_right = 50.3333
margin_bottom = 47.0
custom_fonts/font = SubResource( 12 )
text = "6"

[node name="col" type="CollisionShape2D" parent="savegames/page6"]
position = Vector2( 19.8132, 20.1734 )
shape = SubResource( 13 )

[node name="page7" type="Area2D" parent="savegames"]
visible = false
position = Vector2( 859.045, 114.063 )
scale = Vector2( 1.5, 1.5 )
z_index = 99

[node name="label_background" type="Panel" parent="savegames/page7"]
modulate = Color( 0.445268, 2.16864, 2.21, 1 )
self_modulate = Color( 0.741176, 0.811765, 0.862745, 1 )
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="page_number" type="Label" parent="savegames/page7"]
margin_left = 11.0
margin_top = -8.0
margin_right = 51.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 12 )
text = "7"

[node name="col" type="CollisionShape2D" parent="savegames/page7"]
position = Vector2( 19.8132, 20.1734 )
shape = SubResource( 13 )

[node name="page8" type="Area2D" parent="savegames"]
visible = false
position = Vector2( 924.045, 114.063 )
scale = Vector2( 1.5, 1.5 )
z_index = 99

[node name="label_background" type="Panel" parent="savegames/page8"]
modulate = Color( 0.445268, 2.16864, 2.21, 1 )
self_modulate = Color( 0.741176, 0.811765, 0.862745, 1 )
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="page_number" type="Label" parent="savegames/page8"]
margin_left = 9.0
margin_top = -8.0
margin_right = 49.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 12 )
text = "8"

[node name="col" type="CollisionShape2D" parent="savegames/page8"]
position = Vector2( 19.8132, 20.1734 )
shape = SubResource( 13 )

[node name="fx" type="Tween" parent="."]
[connection signal="input_event" from="load game/load" to="." method="_on_load_input_event"]
[connection signal="mouse_entered" from="load game/load" to="." method="_on_load_mouse_entered"]
[connection signal="mouse_exited" from="load game/load" to="." method="_on_load_mouse_exited"]
[connection signal="input_event" from="save game/save" to="." method="_on_save_input_event"]
[connection signal="mouse_entered" from="save game/save" to="." method="_on_save_mouse_entered"]
[connection signal="mouse_exited" from="save game/save" to="." method="_on_save_mouse_exited"]
[connection signal="input_event" from="exit game/exit" to="." method="_on_exit_input_event"]
[connection signal="mouse_entered" from="exit game/exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="exit game/exit" to="." method="_on_exit_mouse_exited"]
[connection signal="input_event" from="patreon/patreon" to="." method="_on_patreon_input_event"]
[connection signal="mouse_entered" from="patreon/patreon" to="." method="_on_patreon_mouse_entered"]
[connection signal="mouse_exited" from="patreon/patreon" to="." method="_on_patreon_mouse_exited"]
[connection signal="input_event" from="savegames/save1/save1" to="." method="_on_save1_input_event"]
[connection signal="mouse_entered" from="savegames/save1/save1" to="." method="_on_save1_mouse_entered"]
[connection signal="mouse_exited" from="savegames/save1/save1" to="." method="_on_save1_mouse_exited"]
[connection signal="input_event" from="savegames/save2/save2" to="." method="_on_save2_input_event"]
[connection signal="mouse_entered" from="savegames/save2/save2" to="." method="_on_save2_mouse_entered"]
[connection signal="mouse_exited" from="savegames/save2/save2" to="." method="_on_save2_mouse_exited"]
[connection signal="input_event" from="savegames/save3/save3" to="." method="_on_save3_input_event"]
[connection signal="mouse_entered" from="savegames/save3/save3" to="." method="_on_save3_mouse_entered"]
[connection signal="mouse_exited" from="savegames/save3/save3" to="." method="_on_save3_mouse_exited"]
[connection signal="input_event" from="savegames/save4/save4" to="." method="_on_save4_input_event"]
[connection signal="mouse_entered" from="savegames/save4/save4" to="." method="_on_save4_mouse_entered"]
[connection signal="mouse_exited" from="savegames/save4/save4" to="." method="_on_save4_mouse_exited"]
[connection signal="input_event" from="savegames/save5/save5" to="." method="_on_save5_input_event"]
[connection signal="mouse_entered" from="savegames/save5/save5" to="." method="_on_save5_mouse_entered"]
[connection signal="mouse_exited" from="savegames/save5/save5" to="." method="_on_save5_mouse_exited"]
[connection signal="input_event" from="savegames/save6/save6" to="." method="_on_save6_input_event"]
[connection signal="mouse_entered" from="savegames/save6/save6" to="." method="_on_save6_mouse_entered"]
[connection signal="mouse_exited" from="savegames/save6/save6" to="." method="_on_save6_mouse_exited"]
[connection signal="input_event" from="savegames/page1" to="." method="_on_page1_input_event"]
[connection signal="mouse_entered" from="savegames/page1" to="." method="_on_page1_mouse_entered"]
[connection signal="mouse_exited" from="savegames/page1" to="." method="_on_page1_mouse_exited"]
[connection signal="input_event" from="savegames/page2" to="." method="_on_page2_input_event"]
[connection signal="mouse_entered" from="savegames/page2" to="." method="_on_page2_mouse_entered"]
[connection signal="mouse_exited" from="savegames/page2" to="." method="_on_page2_mouse_exited"]
[connection signal="input_event" from="savegames/page3" to="." method="_on_page3_input_event"]
[connection signal="mouse_entered" from="savegames/page3" to="." method="_on_page3_mouse_entered"]
[connection signal="mouse_exited" from="savegames/page3" to="." method="_on_page3_mouse_exited"]
[connection signal="input_event" from="savegames/page4" to="." method="_on_page4_input_event"]
[connection signal="mouse_entered" from="savegames/page4" to="." method="_on_page4_mouse_entered"]
[connection signal="mouse_exited" from="savegames/page4" to="." method="_on_page4_mouse_exited"]
[connection signal="input_event" from="savegames/page5" to="." method="_on_page5_input_event"]
[connection signal="mouse_entered" from="savegames/page5" to="." method="_on_page5_mouse_entered"]
[connection signal="mouse_exited" from="savegames/page5" to="." method="_on_page5_mouse_exited"]
[connection signal="input_event" from="savegames/page6" to="." method="_on_page6_input_event"]
[connection signal="mouse_entered" from="savegames/page6" to="." method="_on_page6_mouse_entered"]
[connection signal="mouse_exited" from="savegames/page6" to="." method="_on_page6_mouse_exited"]
[connection signal="input_event" from="savegames/page7" to="." method="_on_page7_input_event"]
[connection signal="mouse_entered" from="savegames/page7" to="." method="_on_page7_mouse_entered"]
[connection signal="mouse_exited" from="savegames/page7" to="." method="_on_page7_mouse_exited"]
[connection signal="input_event" from="savegames/page8" to="." method="_on_page8_input_event"]
[connection signal="mouse_entered" from="savegames/page8" to="." method="_on_page8_mouse_entered"]
[connection signal="mouse_exited" from="savegames/page8" to="." method="_on_page8_mouse_exited"]
